--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "html-scripting",
-  "version": "0.1.2",
-  "main": "src/unknown.js",
+  "version": "0.1.3",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest"
   },
